--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,11 @@ android {
         jvmTarget = JavaVersion.VERSION_1_8.toString()
     }
 
+    testOptions.unitTests {
+        includeAndroidResources = true
+        returnDefaultValues = true
+    }
+
 }
 
 dependencies {
@@ -53,6 +58,7 @@ dependencies {
     kapt "androidx.lifecycle:lifecycle-compiler:2.2.0"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:1.3.72"
 
     implementation "androidx.paging:paging-runtime-ktx:2.1.2"
 
@@ -77,7 +83,12 @@ dependencies {
     implementation "androidx.room:room-ktx:2.2.5"
 
     testImplementation 'junit:junit:4.12'
+    testImplementation "org.hamcrest:hamcrest-all:1.3"
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
+    testImplementation "org.robolectric:robolectric:4.3.1"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.2.1"
+
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    implementation "org.jetbrains.kotlin:kotlin-reflect:1.3.72"
+
 }
