--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,7 +15,7 @@ android {
         versionCode 1
         versionName "1.0"
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "com.reportedsocks.demoproject.MyTestRunner"
     }
 
     buildTypes {
@@ -96,8 +96,18 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     androidTestImplementation "junit:junit:4.12"
     androidTestImplementation "org.mockito:mockito-core:2.23.0"
-    androidTestImplementation 'org.mockito:mockito-inline:2.19.0'
+    androidTestImplementation "com.linkedin.dexmaker:dexmaker-mockito:2.19.0"
     androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.2.1"
     androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
+    androidTestImplementation 'androidx.test:runner:1.2.0'
+    androidTestImplementation 'androidx.test:rules:1.2.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-intents:3.1.0'
 
+    // Testing code should not be included in the main code.
+    // Once https://issuetracker.google.com/128612536 is fixed this can be fixed.
+    debugImplementation "androidx.fragment:fragment-testing:1.3.0-alpha06"
+    debugImplementation "androidx.test:core:1.2.0"
+
+    //  to build TestComponent in test/ folder
+    kaptAndroidTest 'com.google.dagger:dagger-compiler:2.26'
 }
