--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -8,3 +8,15 @@ jobs:
         uses: actions/checkout@v2
       - name: Build the app
         run: ./gradlew build
+        
+  test:
+    name: Run Unit Tests
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+      - name: Unit tests
+        run: bash ./gradlew test --stacktrace
