testing github actions#3

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -12,3 +12,13 @@ jobs:
           java-version: 1.8
       - name: Unit tests
         run: bash ./gradlew test --stacktrace
+      - name: Run Instrumentation Tests (reactivecircus)
+        uses: reactivecircus/android-emulator-runner@v2.6.1
+          with:
+            api-level: 29
+            target: default
+            arch: x86
+            profile: Nexus 6
+            script: ./gradlew connectedCheck --stacktrace
+
+
