--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -3,13 +3,15 @@ on: [pull_request, push]
 jobs:
   test:
     name: Run Unit Tests
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
       - name: set up JDK 1.8
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
+      - name: Unit tests
+        run: bash ./gradlew test --stacktrace
       - name: Android Emulator
         uses: vgaidarji/android-github-actions-emulator@v1.0.1
 
