--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,18 +1,20 @@
 name: Build
 on: [pull_request, push]
 jobs:
-  test:
-    name: Run Unit Tests
-    runs-on: ubuntu-latest
+  
+  androidTest:
+    runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
-      - name: set up JDK 1.8
-        uses: actions/setup-java@v1
+      - name: Instrumentation Tests
+        uses: reactivecircus/android-emulator-runner@v2
+        env:
+          FABRIC_API_KEY: ${{ secrets.FABRIC_API_KEY }}
+          FABRIC_API_SECRET: ${{ secrets.FABRIC_API_SECRET }}
         with:
-          java-version: 1.8
-      - name: Unit tests
-        run: bash ./gradlew test --stacktrace
-      - name: Android Emulator
-        uses: vgaidarji/android-github-actions-emulator@v1.0.1
+          api-level: 29
+          arch: x86
+          disable-animations: true
+          script: ./gradlew connectedAndroidTest --stacktrace
 
 
