--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -3,18 +3,10 @@ on: [pull_request, push]
 jobs:
   
   androidTest:
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Instrumentation Tests
-        uses: reactivecircus/android-emulator-runner@v2
-        env:
-          FABRIC_API_KEY: ${{ secrets.FABRIC_API_KEY }}
-          FABRIC_API_SECRET: ${{ secrets.FABRIC_API_SECRET }}
-        with:
-          api-level: 29
-          arch: x86
-          disable-animations: true
-          script: ./gradlew connectedAndroidTest --stacktrace
+      - name: Unit tests
+        run: bash ./gradlew test --stacktrace
 
 
