--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -2,11 +2,18 @@ name: Build
 on: [pull_request, push]
 jobs:
   
-  androidTest:
-    runs-on: ubuntu-latest
+ test:
+    runs-on: macOS-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Android Emulator
-        uses: vgaidarji/android-github-actions-emulator@v1.0.1
+    - name: checkout
+      uses: actions/checkout@v1
+      with:
+        fetch-depth: 1
+
+    - name: run tests
+      uses: reactivecircus/android-emulator-runner@v1
+      with:
+        api-level: 29
+        script: ./gradlew connectedCheck
 
 
