--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -2,16 +2,14 @@ name: Build
 on: [pull_request, push]
 jobs:
   
- test:
-    runs-on: macOS-latest
+  test:
+    runs-on: macos-latest
     steps:
     - name: checkout
-      uses: actions/checkout@v1
-      with:
-        fetch-depth: 1
+      uses: actions/checkout@v2
 
     - name: run tests
-      uses: reactivecircus/android-emulator-runner@v1
+      uses: reactivecircus/android-emulator-runner@v2
       with:
         api-level: 29
         script: ./gradlew connectedCheck
