--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -2,16 +2,33 @@ name: Build
 on: [pull_request, push]
 jobs:
   
-  test:
-    runs-on: macos-latest
-    steps:
-    - name: checkout
-      uses: actions/checkout@v2
+  instrumentation-tests:
+        name: Instrumentation tests
+        runs-on: macOS-latest
+        timeout-minutes: 60
+        strategy:
+            fail-fast: true
+            matrix:
+                api-level: [15, 19, 21, 25, 29]
+        steps:
+            - uses: actions/checkout@v2
+            - uses: gradle/wrapper-validation-action@v1
+            - uses: actions/setup-java@v1
+              with:
+                  java-version: 11
 
-    - name: run tests
-      uses: reactivecircus/android-emulator-runner@v2
-      with:
-        api-level: 29
-        script: ./gradlew connectedCheck
+            # Restore the cache.
+            # Intentionally don't set 'restore-keys' so the cache never contains redundant dependencies.
+            - uses: actions/cache@v2
+              with:
+                  path: ~/.gradle/caches
+                  key: gradle-${{ runner.os }}-${{ hashFiles('**/build.gradle.kts') }}-${{ hashFiles('**/gradle/wrapper/gradle-wrapper.properties') }}-${{ hashFiles('**/buildSrc/src/main/kotlin/Library.kt') }}
+
+            - name: Instrumentation tests
+              uses: reactivecircus/android-emulator-runner@v2
+              with:
+                  api-level: ${{ matrix.api-level }}
+                  arch: x86
+                  script: ./gradlew connectedDebugAndroidTest
 
 
