--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -2,33 +2,95 @@ name: Build
 on: [pull_request, push]
 jobs:
   
-  instrumentation-tests:
-        name: Instrumentation tests
-        runs-on: macOS-latest
-        timeout-minutes: 60
-        strategy:
-            fail-fast: true
-            matrix:
-                api-level: [15, 19, 21, 25, 29]
-        steps:
-            - uses: actions/checkout@v2
-            - uses: gradle/wrapper-validation-action@v1
-            - uses: actions/setup-java@v1
-              with:
-                  java-version: 11
+  build:
+    # Skip build if head commit contains 'skip ci'
+    if: "!contains(github.event.head_commit.message, 'skip ci')"
 
-            # Restore the cache.
-            # Intentionally don't set 'restore-keys' so the cache never contains redundant dependencies.
-            - uses: actions/cache@v2
-              with:
-                  path: ~/.gradle/caches
-                  key: gradle-${{ runner.os }}-${{ hashFiles('**/build.gradle.kts') }}-${{ hashFiles('**/gradle/wrapper/gradle-wrapper.properties') }}-${{ hashFiles('**/buildSrc/src/main/kotlin/Library.kt') }}
+    runs-on: macOS-latest
+    env:
+      JAVA_TOOL_OPTIONS: -Xmx5120m
+      GRADLE_OPTS: -Dorg.gradle.daemon=false -Dorg.gradle.workers.max=2 -Dkotlin.incremental=false -Dkotlin.compiler.execution.strategy=in-process
+      TERM: dumb
 
-            - name: Instrumentation tests
-              uses: reactivecircus/android-emulator-runner@v2
-              with:
-                  api-level: ${{ matrix.api-level }}
-                  arch: x86
-                  script: ./gradlew connectedDebugAndroidTest
+    steps:
+      - uses: actions/checkout@v2
 
+      - name: set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+
+      - name: Decrypt secrets
+        run: release/signing-setup.sh $ENCRYPT_KEY
+        env:
+          ENCRYPT_KEY: ${{ secrets.ENCRYPT_KEY }}
+
+      - name: Generate cache key
+        run: ./checksum.sh checksum.txt
+
+      - uses: actions/cache@v1
+        with:
+          path: ~/.gradle/caches
+          key: ${{ runner.os }}-gradle-${{ hashFiles('checksum.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
+      - name: Build, lint and spotless
+        run: ./gradlew spotlessCheck assemble lintDebug --scan
+
+      - name: Clean secrets
+        if: always()
+        run: release/signing-cleanup.sh
+
+  test:
+    runs-on: macOS-latest
+    needs: build
+    strategy:
+      matrix:
+       api-level: [21, 23, 26, 29]
+    env:
+      JAVA_TOOL_OPTIONS: -Xmx3072m
+      GRADLE_OPTS: -Dorg.gradle.daemon=false -Dorg.gradle.workers.max=2 -Dkotlin.incremental=false -Dkotlin.compiler.execution.strategy=in-process
+      TERM: dumb
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+      - name: Decrypt secrets
+        run: release/signing-setup.sh $ENCRYPT_KEY
+        env:
+          ENCRYPT_KEY: ${{ secrets.ENCRYPT_KEY }}
+
+      - name: Generate cache key
+        run: ./checksum.sh checksum.txt
+
+      - uses: actions/cache@v1
+        with:
+          path: ~/.gradle/caches
+          key: ${{ runner.os }}-gradle-${{ hashFiles('checksum.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
+      - name: Run tests
+        uses: reactivecircus/android-emulator-runner@v2
+        with:
+          api-level: ${{ matrix.api-level }}
+          script: ./gradlew connectedCheck
+
+      - name: Clean secrets
+        if: always()
+        run: release/signing-cleanup.sh
+
+      - name: Copy test results
+        if: always()
+        run: |
+          mkdir -p junit
+          find . -type f -regex ".*/build/test-results/.*xml" -exec cp {} junit/ \;
+      - name: Upload test results
+        if: always()
+        uses: actions/upload-artifact@v1
+        with:
+          name: junit-results
+          path: junit
 
