--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,37 +1,14 @@
 name: Build
 on: [pull_request, push]
 jobs:
-  
-  instrumented-tests:
-    name: Instrumented tests
-    runs-on: macos-latest
-    timeout-minutes: 25
-    env:
-      JAVA_TOOL_OPTIONS: -Xmx4g
-      ENABLE_APP_VERSIONING: false
-
+  test:
+    name: Run Unit Tests
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-
-      - uses: gradle/wrapper-validation-action@v1
-
-      - uses: actions/setup-java@v1
+      - name: set up JDK 1.8
+        uses: actions/setup-java@v1
         with:
-          java-version: 15
-
-      - uses: actions/cache@v2
-        with:
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-          key: ${{ runner.os }}-${{ github.job }}-${{ hashFiles('**/*.gradle*') }}-${{ hashFiles('**/gradle/wrapper/gradle-wrapper.properties') }}-${{ hashFiles('**/buildSrc/**/*.kt') }}
-          restore-keys: |
-            ${{ runner.os }}-${{ github.job }}-
-      - name: Run Android instrumented tests
-        uses: reactivecircus/android-emulator-runner@v2
-        with:
-          api-level: 28
-          arch: x86_64
-          profile: Nexus 5X
-          script: ./gradlew connectedCheck --stacktrace
-
+          java-version: 1.8
+      - name: Unit tests
+        run: bash ./gradlew test --stacktrace
