--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -12,3 +12,7 @@ jobs:
           java-version: 1.8
       - name: Unit tests
         run: bash ./gradlew test --stacktrace
+      - name: Android Emulator
+  # You may pin to the exact commit or the version.
+  # uses: vgaidarji/android-github-actions-emulator@30c50f42518922e01004c2152911bb458d33ff3b
+        uses: vgaidarji/android-github-actions-emulator@v1.0.1
