--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -3,7 +3,7 @@ on: [pull_request, push]
 jobs:
   test:
     name: Run Unit Tests
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
       - name: set up JDK 1.8
@@ -12,7 +12,7 @@ jobs:
           java-version: 1.8
       - name: Unit tests
         run: bash ./gradlew test --stacktrace
-      - name: Android Emulator
+      - name: Android Emulator Runner
   # You may pin to the exact commit or the version.
-  # uses: vgaidarji/android-github-actions-emulator@30c50f42518922e01004c2152911bb458d33ff3b
-        uses: vgaidarji/android-github-actions-emulator@v1.0.1
+  # uses: ReactiveCircus/android-emulator-runner@e08f702234bdc95883c7fd5c7d2867ccf1a8463b
+        uses: ReactiveCircus/android-emulator-runner@v2.13.0
