--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,3 +16,5 @@ jobs:
   # You may pin to the exact commit or the version.
   # uses: ReactiveCircus/android-emulator-runner@e08f702234bdc95883c7fd5c7d2867ccf1a8463b
         uses: ReactiveCircus/android-emulator-runner@v2.13.0
+        with:
+          api-level: 23
